force-app/main/default/objects/Chantier__c/Chantier__c.object-meta.xml
<CustomObject>
    <description>Le/les chantier(s) d&apos;un compte (client)</description>
    <label>Chantier</label>
    <nameField>
        <label>Nom du chantier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chantiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>