force-app/main/default/objects/Chantier__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <formula>TRIM(
  TRIM(rue__c) + BR() + 
  TRIM(codePostal__c + &apos; &apos; + ville__c) + BR() + 
  TRIM(departement__c + &apos; &apos; + pays__c)
)</formula>
    <label>Adresse</label>
    <type>Text</type>
</CustomField>