force-app/main/default/objects/Chantier__c/fields/addressSummary__c.field-meta.xml
<CustomField>
    <fullName>addressSummary__c</fullName>
    <formula>TRIM(rue__c + &apos; &apos; + codePostal__c + &apos; &apos; + ville__c + &apos; &apos; + pays__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Résumé (Adresse)</label>
    <type>Text</type>
</CustomField>