force-app/main/default/objects/Chantier__c/fields/adresseGeolocalisation__c.field-meta.xml
<CustomField>
    <fullName>adresseGeolocalisation__c</fullName>
    <label>Adresse de géolocalisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>