force-app/main/default/objects/Chantier__c/fields/anneeAchat__c.field-meta.xml
<CustomField>
    <fullName>anneeAchat__c</fullName>
    <label>Année d&apos;achat</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>