force-app/main/default/objects/Chantier__c/fields/anneeConstruction__c.field-meta.xml
<CustomField>
    <fullName>anneeConstruction__c</fullName>
    <label>Année de construction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NSP</fullName>
            </value>
            <value>
                <fullName>Avant 1940</fullName>
            </value>
            <value>
                <fullName>1950</fullName>
            </value>
            <value>
                <fullName>1960</fullName>
            </value>
            <value>
                <fullName>1970</fullName>
            </value>
            <value>
                <fullName>1980</fullName>
            </value>
            <value>
                <fullName>1990</fullName>
            </value>
            <value>
                <fullName>2000</fullName>
            </value>
            <value>
                <fullName>2010+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>