force-app/main/default/objects/Chantier__c/fields/assetCount__c.field-meta.xml
<CustomField>
    <fullName>assetCount__c</fullName>
    <description>Nombre d&apos;actifs liés au chantier</description>
    <inlineHelpText>Nombre d&apos;actifs liés au chantier</inlineHelpText>
    <label>[#] Nombre d&apos;actifs</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>