force-app/main/default/objects/Chantier__c/fields/aSynchroniserDQE__c.field-meta.xml
<CustomField>
    <fullName>aSynchroniserDQE__c</fullName>
    <label>A synchroniser DQE</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>