force-app/main/default/objects/Chantier__c/fields/autreLocataire__c.field-meta.xml
<CustomField>
    <fullName>autreLocataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autre locataire</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Autre locataire)</relationshipLabel>
    <relationshipName>autreLocataireChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>