force-app/main/default/objects/Chantier__c/fields/autreOccupant__c.field-meta.xml
<CustomField>
    <fullName>autreOccupant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autre occupant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Autre occupant)</relationshipLabel>
    <relationshipName>autreOccupantChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>