force-app/main/default/objects/Chantier__c/fields/autreProprietaire__c.field-meta.xml
<CustomField>
    <fullName>autreProprietaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Autre propriétaire (fiscal)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chantiers (Autre propriétaire)</relationshipLabel>
    <relationshipName>autreProprietaireChantiers</relationshipName>
    <type>Lookup</type>
</CustomField>