force-app/main/default/objects/Chantier__c/fields/autreTelephoneLocataires__c.field-meta.xml
<CustomField>
    <fullName>autreTelephoneLocataires__c</fullName>
    <label>Autre téléphone (Locataires)</label>
    <type>Phone</type>
</CustomField>