force-app/main/default/objects/Chantier__c/fields/autreTelephoneOccupants__c.field-meta.xml
<CustomField>
    <fullName>autreTelephoneOccupants__c</fullName>
    <label>Autre téléphone (Occupants)</label>
    <type>Phone</type>
</CustomField>