force-app/main/default/objects/Chantier__c/fields/autreTelephoneProprietaires__c.field-meta.xml
<CustomField>
    <fullName>autreTelephoneProprietaires__c</fullName>
    <label>Autre téléphone (Propriétaires)</label>
    <type>Phone</type>
</CustomField>