force-app/main/default/objects/Chantier__c/fields/bilanEnergetique__c.field-meta.xml
<CustomField>
    <fullName>bilanEnergetique__c</fullName>
    <label>Bilan énergétique</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>