force-app/main/default/objects/Chantier__c/fields/caracteristiquesUrbanisme__c.field-meta.xml
<CustomField>
    <fullName>caracteristiquesUrbanisme__c</fullName>
    <label>Caractéristique(s) urbanisme</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accord mairie</fullName>
            </value>
            <value>
                <fullName>Accord syndic</fullName>
            </value>
            <value>
                <fullName>Aéroport</fullName>
            </value>
            <value>
                <fullName>Bâtiment de France</fullName>
            </value>
            <value>
                <fullName>Littoral</fullName>
            </value>
            <value>
                <fullName>Monument historique</fullName>
            </value>
            <value>
                <fullName>Respect façade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>