force-app/main/default/objects/Chantier__c/fields/caseInProgressCount__c.field-meta.xml
<CustomField>
    <fullName>caseInProgressCount__c</fullName>
    <label>[#] Nombre de requête en cours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>