force-app/main/default/objects/Chantier__c/fields/chauffages__c.field-meta.xml
<CustomField>
    <fullName>chauffages__c</fullName>
    <label>Mode(s) de chauffe</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individuel Electrique</fullName>
            </value>
            <value>
                <fullName>Individuel Fuel</fullName>
            </value>
            <value>
                <fullName>Individuel Gaz</fullName>
            </value>
            <value>
                <fullName>Individuel Autre</fullName>
            </value>
            <value>
                <fullName>Collectif</fullName>
            </value>
            <value>
                <fullName>Energie renouvelable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>