force-app/main/default/objects/Chantier__c/fields/civiliteLocataires__c.field-meta.xml
<CustomField>
    <fullName>civiliteLocataires__c</fullName>
    <label>Civilité (Locataires)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>