force-app/main/default/objects/Chantier__c/fields/civiliteOccupants__c.field-meta.xml
<CustomField>
    <fullName>civiliteOccupants__c</fullName>
    <label>Civilité (Occupants)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>