force-app/main/default/objects/Chantier__c/fields/civiliteProprietaires__c.field-meta.xml
<CustomField>
    <fullName>civiliteProprietaires__c</fullName>
    <label>Civilité (Propriétaires)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>