force-app/main/default/objects/Chantier__c/fields/codeAcces__c.field-meta.xml
<CustomField>
    <fullName>codeAcces__c</fullName>
    <label>Code d&apos;accès</label>
    <length>10</length>
    <type>Text</type>
</CustomField>