force-app/main/default/objects/Chantier__c/fields/codeCommune__c.field-meta.xml
<CustomField>
    <fullName>codeCommune__c</fullName>
    <description>Code commune unique renvoyé par DQE Address</description>
    <label>Code commune</label>
    <length>255</length>
    <type>Text</type>
</CustomField>