force-app/main/default/objects/Chantier__c/fields/codeDepotActuel__c.field-meta.xml
<CustomField>
    <fullName>codeDepotActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.codeDepot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code du dépôt (Sect. K par K)</label>
    <type>Text</type>
</CustomField>