force-app/main/default/objects/Chantier__c/fields/codeDepotInitial__c.field-meta.xml
<CustomField>
    <fullName>codeDepotInitial__c</fullName>
    <label>Code du dépôt (Sect. Init.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>