force-app/main/default/objects/Chantier__c/fields/codeDepotReference__c.field-meta.xml
<CustomField>
    <fullName>codeDepotReference__c</fullName>
    <label>Code du dépôt (Sect. Réf.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>