force-app/main/default/objects/Chantier__c/fields/codeDSActuel__c.field-meta.xml
<CustomField>
    <fullName>codeDSActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.codeDS__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code de la DS (Sect. K par K)</label>
    <type>Text</type>
</CustomField>