force-app/main/default/objects/Chantier__c/fields/codeDSInitial__c.field-meta.xml
<CustomField>
    <fullName>codeDSInitial__c</fullName>
    <label>Code de la DS (Sect. Init.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>