force-app/main/default/objects/Chantier__c/fields/codeDSReference__c.field-meta.xml
<CustomField>
    <fullName>codeDSReference__c</fullName>
    <label>Code de la DS (Sect. Réf.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>