force-app/main/default/objects/Chantier__c/fields/codeDVActuel__c.field-meta.xml
<CustomField>
    <fullName>codeDVActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.codeDV__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code de la DV (Sect. K par K)</label>
    <type>Text</type>
</CustomField>