force-app/main/default/objects/Chantier__c/fields/codeDVInitial__c.field-meta.xml
<CustomField>
    <fullName>codeDVInitial__c</fullName>
    <label>Code de la DV (Sect. Init.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>