force-app/main/default/objects/Chantier__c/fields/codeDVReference__c.field-meta.xml
<CustomField>
    <fullName>codeDVReference__c</fullName>
    <label>Code de la DV (Sect. Réf.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>