force-app/main/default/objects/Chantier__c/fields/codeMagasinActuel__c.field-meta.xml
<CustomField>
    <fullName>codeMagasinActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.codeMagasin__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code du magasin (Sect. K par K)</label>
    <type>Text</type>
</CustomField>