force-app/main/default/objects/Chantier__c/fields/codeMagasinInitial__c.field-meta.xml
<CustomField>
    <fullName>codeMagasinInitial__c</fullName>
    <label>Code du magasin (Sect. Init.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>