force-app/main/default/objects/Chantier__c/fields/codeMagasinReference__c.field-meta.xml
<CustomField>
    <fullName>codeMagasinReference__c</fullName>
    <label>Code du magasin (Sect. Réf.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>