force-app/main/default/objects/Chantier__c/fields/codeMagasinTechnique__c.field-meta.xml
<CustomField>
    <fullName>codeMagasinTechnique__c</fullName>
    <description>CRM-377 : Champ technique contenant la valeur de la formule codeMagasinActuel__c</description>
    <externalId>true</externalId>
    <label>Code du magasin (Technique)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>