force-app/main/default/objects/Chantier__c/fields/codePostal__c.field-meta.xml
<CustomField>
    <fullName>codePostal__c</fullName>
    <label>Code postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>