force-app/main/default/objects/Chantier__c/fields/codePostalLocataires__c.field-meta.xml
<CustomField>
    <fullName>codePostalLocataires__c</fullName>
    <label>Code postal (Locataires)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>