force-app/main/default/objects/Chantier__c/fields/codePostalOccupants__c.field-meta.xml
<CustomField>
    <fullName>codePostalOccupants__c</fullName>
    <label>Code postal (Occupants)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>