force-app/main/default/objects/Chantier__c/fields/codePostalProprietaires__c.field-meta.xml
<CustomField>
    <fullName>codePostalProprietaires__c</fullName>
    <label>Code postal (Propriétaires)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>