force-app/main/default/objects/Chantier__c/fields/codeRegionActuel__c.field-meta.xml
<CustomField>
    <fullName>codeRegionActuel__c</fullName>
    <formula>IF(ISNULL(sectorisation__c), &apos;&apos;, sectorisation__r.codeRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code de la région (Sect. K par K)</label>
    <type>Text</type>
</CustomField>