force-app/main/default/objects/Chantier__c/fields/codeRegionInitial__c.field-meta.xml
<CustomField>
    <fullName>codeRegionInitial__c</fullName>
    <label>Code de la région (Sect. Init.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>