force-app/main/default/objects/Chantier__c/fields/codeRegionReference__c.field-meta.xml
<CustomField>
    <fullName>codeRegionReference__c</fullName>
    <label>Code de la région (Sect. Réf.)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>