force-app/main/default/objects/Chantier__c/fields/complementAdresse__c.field-meta.xml
<CustomField>
    <fullName>complementAdresse__c</fullName>
    <inlineHelpText>Informations affichées comme 2nd ligne sur l’adresse postale.
Résidence, bâtiment, zone, etc.</inlineHelpText>
    <label>Complément d&apos;adresse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>