force-app/main/default/objects/Chantier__c/fields/cpqQuoteSoldNumber__c.field-meta.xml
<CustomField>
    <fullName>cpqQuoteSoldNumber__c</fullName>
    <label>[#] Nombre de devis CPQ vendus</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>