force-app/main/default/objects/Chantier__c/fields/createdByCall_Equipe__c.field-meta.xml
<CustomField>
    <fullName>createdByCall_Equipe__c</fullName>
    <formula>IF(OR(CreatedBy.Profile.Name = &apos;K/K - DC&apos;, CreatedBy.Profile.Name = &apos;K/K - TA&apos;, CreatedBy.Profile.Name = &apos;K/K - TA/Entrant&apos;, CreatedBy.Profile.Name = &apos;K/K - TA/Sortant&apos;, CreatedBy.Profile.Name = &apos;K/K - Superviseur&apos;, CreatedBy.Profile.Name = &apos;K/K - Assistante Call&apos;, CreatedBy.UserRole.Name = &apos;Directeur Call&apos;, CreatedBy.UserRole.Name = &apos;Superviseur&apos;, CreatedBy.UserRole.Name = &apos;TA&apos;), TEXT(CreatedBy.EquipesCall__c), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipe (Création)</label>
    <type>Text</type>
</CustomField>