force-app/main/default/objects/Chantier__c/fields/customerOrderCount__c.field-meta.xml
<CustomField>
    <fullName>customerOrderCount__c</fullName>
    <description>Nombre de commande client du chantier</description>
    <inlineHelpText>Nombre de commande client du chantier</inlineHelpText>
    <label>[#] Nombre de commande client</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>