force-app/main/default/objects/Chantier__c/fields/dateDernierAppelSortant__c.field-meta.xml
<CustomField>
    <fullName>dateDernierAppelSortant__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du dernier appel sortant (Call)</label>
    <type>DateTime</type>
</CustomField>