force-app/main/default/objects/Chantier__c/fields/dateDernierAppelSortantKparK__c.field-meta.xml
<CustomField>
    <fullName>dateDernierAppelSortantKparK__c</fullName>
    <formula>IF (ISNULL(dateDernierAppelSortant__c),
   IF (ISNULL(dateDernierPhoning__c),
       NULL,
       dateDernierPhoning__c),
   IF (ISNULL(dateDernierPhoning__c),
       dateDernierAppelSortant__c,
       IF (dateDernierAppelSortant__c &gt;= dateDernierPhoning__c,
           dateDernierAppelSortant__c,
           dateDernierPhoning__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du dernier appel sortant (K par K)</label>
    <type>DateTime</type>
</CustomField>