force-app/main/default/objects/Chantier__c/fields/dateDernierContrat__c.field-meta.xml
<CustomField>
    <fullName>dateDernierContrat__c</fullName>
    <label>Date du dernier contrat</label>
    <type>Date</type>
</CustomField>