force-app/main/default/objects/Chantier__c/fields/dateDernierDevis__c.field-meta.xml
<CustomField>
    <fullName>dateDernierDevis__c</fullName>
    <label>Date du dernier devis</label>
    <type>Date</type>
</CustomField>