force-app/main/default/objects/Chantier__c/fields/dateDerniereAffectationCall__c.field-meta.xml
<CustomField>
    <fullName>dateDerniereAffectationCall__c</fullName>
    <label>Date de dernière affectation call</label>
    <type>Date</type>
</CustomField>