force-app/main/default/objects/Chantier__c/fields/dateDerniereAffectationVendeur__c.field-meta.xml
<CustomField>
    <fullName>dateDerniereAffectationVendeur__c</fullName>
    <label>Date de dernière affectation vendeur</label>
    <type>Date</type>
</CustomField>