force-app/main/default/objects/Chantier__c/fields/dateDernierEmail__c.field-meta.xml
<CustomField>
    <fullName>dateDernierEmail__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du dernier email (Call)</label>
    <type>DateTime</type>
</CustomField>