force-app/main/default/objects/Chantier__c/fields/dateDernierIEC__c.field-meta.xml
<CustomField>
    <fullName>dateDernierIEC__c</fullName>
    <label>Date du dernier IEC</label>
    <type>Date</type>
</CustomField>