force-app/main/default/objects/Chantier__c/fields/dateDernierIncontournable__c.field-meta.xml
<CustomField>
    <fullName>dateDernierIncontournable__c</fullName>
    <label>Date du dernier incontournable</label>
    <type>Date</type>
</CustomField>