force-app/main/default/objects/Chantier__c/fields/dateDernierPhoning__c.field-meta.xml
<CustomField>
    <fullName>dateDernierPhoning__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du dernier phoning (Vente)</label>
    <type>DateTime</type>
</CustomField>