force-app/main/default/objects/Chantier__c/fields/dateDernierProjet__c.field-meta.xml
<CustomField>
    <fullName>dateDernierProjet__c</fullName>
    <label>Date du dernier projet</label>
    <type>Date</type>
</CustomField>