force-app/main/default/objects/Chantier__c/fields/dateDernierR1__c.field-meta.xml
<CustomField>
    <fullName>dateDernierR1__c</fullName>
    <label>Date du dernier R1</label>
    <type>DateTime</type>
</CustomField>