force-app/main/default/objects/Chantier__c/fields/dateDernierR2__c.field-meta.xml
<CustomField>
    <fullName>dateDernierR2__c</fullName>
    <label>Date du dernier R2</label>
    <type>DateTime</type>
</CustomField>