force-app/main/default/objects/Chantier__c/fields/dateDernierRDV__c.field-meta.xml
<CustomField>
    <fullName>dateDernierRDV__c</fullName>
    <label>Date du dernier RDV</label>
    <type>DateTime</type>
</CustomField>