force-app/main/default/objects/Chantier__c/fields/dateDernierRPlus__c.field-meta.xml
<CustomField>
    <fullName>dateDernierRPlus__c</fullName>
    <label>Date du dernier R+</label>
    <type>DateTime</type>
</CustomField>