force-app/main/default/objects/Chantier__c/fields/dateDernierTagAppel__c.field-meta.xml
<CustomField>
    <fullName>dateDernierTagAppel__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du dernier tag d&apos;appel (Call)</label>
    <type>DateTime</type>
</CustomField>