force-app/main/default/objects/Chantier__c/fields/datePremierAppelSortant__c.field-meta.xml
<CustomField>
    <fullName>datePremierAppelSortant__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du 1er appel sortant (Call)</label>
    <type>DateTime</type>
</CustomField>