force-app/main/default/objects/Chantier__c/fields/datePremierAppelSortantKparK__c.field-meta.xml
<CustomField>
    <fullName>datePremierAppelSortantKparK__c</fullName>
    <formula>IF (ISNULL(datePremierAppelSortant__c),
   IF (ISNULL(datePremierPhoning__c),
       NULL,
       datePremierPhoning__c),
   IF (ISNULL(datePremierPhoning__c),
       datePremierAppelSortant__c,
       IF (datePremierAppelSortant__c &lt;= datePremierPhoning__c,
           datePremierAppelSortant__c,
           datePremierPhoning__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du 1er appel sortant (K par K)</label>
    <type>DateTime</type>
</CustomField>