force-app/main/default/objects/Chantier__c/fields/datePremierContrat__c.field-meta.xml
<CustomField>
    <fullName>datePremierContrat__c</fullName>
    <label>Date du 1er contrat</label>
    <type>Date</type>
</CustomField>