force-app/main/default/objects/Chantier__c/fields/datePremierDevis__c.field-meta.xml
<CustomField>
    <fullName>datePremierDevis__c</fullName>
    <label>Date du 1er devis</label>
    <type>Date</type>
</CustomField>