force-app/main/default/objects/Chantier__c/fields/datePremiereAffectationCall__c.field-meta.xml
<CustomField>
    <fullName>datePremiereAffectationCall__c</fullName>
    <label>Date de 1ère affectation call</label>
    <type>Date</type>
</CustomField>