force-app/main/default/objects/Chantier__c/fields/datePremiereAffectationVendeur__c.field-meta.xml
<CustomField>
    <fullName>datePremiereAffectationVendeur__c</fullName>
    <label>Date de 1ère affectation vendeur</label>
    <type>Date</type>
</CustomField>