force-app/main/default/objects/Chantier__c/fields/datePremierEmail__c.field-meta.xml
<CustomField>
    <fullName>datePremierEmail__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du 1er email (Call)</label>
    <type>DateTime</type>
</CustomField>