force-app/main/default/objects/Chantier__c/fields/datePremierIncontournable__c.field-meta.xml
<CustomField>
    <fullName>datePremierIncontournable__c</fullName>
    <label>Date du 1er incontournable</label>
    <type>Date</type>
</CustomField>