force-app/main/default/objects/Chantier__c/fields/datePremierPhoning__c.field-meta.xml
<CustomField>
    <fullName>datePremierPhoning__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du 1er phoning (Vente)</label>
    <type>DateTime</type>
</CustomField>