force-app/main/default/objects/Chantier__c/fields/datePremierProjet__c.field-meta.xml
<CustomField>
    <fullName>datePremierProjet__c</fullName>
    <label>Date du 1er projet</label>
    <type>Date</type>
</CustomField>