force-app/main/default/objects/Chantier__c/fields/datePremierR1__c.field-meta.xml
<CustomField>
    <fullName>datePremierR1__c</fullName>
    <label>Date du 1er R1</label>
    <type>DateTime</type>
</CustomField>