force-app/main/default/objects/Chantier__c/fields/datePremierR2__c.field-meta.xml
<CustomField>
    <fullName>datePremierR2__c</fullName>
    <label>Date du 1er R2</label>
    <type>DateTime</type>
</CustomField>