force-app/main/default/objects/Chantier__c/fields/datePremierRDV__c.field-meta.xml
<CustomField>
    <fullName>datePremierRDV__c</fullName>
    <label>Date du 1er RDV</label>
    <type>DateTime</type>
</CustomField>