force-app/main/default/objects/Chantier__c/fields/datePremierRPlus__c.field-meta.xml
<CustomField>
    <fullName>datePremierRPlus__c</fullName>
    <label>Date du 1er R+</label>
    <type>DateTime</type>
</CustomField>