force-app/main/default/objects/Chantier__c/fields/datePremierTagAppel__c.field-meta.xml
<CustomField>
    <fullName>datePremierTagAppel__c</fullName>
    <inlineHelpText>Indicateur cumulé (non agrégé)</inlineHelpText>
    <label>Date du 1er tag d&apos;appel (Call)</label>
    <type>DateTime</type>
</CustomField>