force-app/main/default/objects/Chantier__c/fields/departement__c.field-meta.xml
<CustomField>
    <fullName>departement__c</fullName>
    <label>Département/Région</label>
    <length>80</length>
    <type>Text</type>
</CustomField>