force-app/main/default/objects/Chantier__c/fields/departementLocataires__c.field-meta.xml
<CustomField>
    <fullName>departementLocataires__c</fullName>
    <label>Département/Région (Locataires)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>