force-app/main/default/objects/Chantier__c/fields/departementOccupants__c.field-meta.xml
<CustomField>
    <fullName>departementOccupants__c</fullName>
    <label>Département/Région (Occupants)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>