force-app/main/default/objects/Chantier__c/fields/departementProprietaires__c.field-meta.xml
<CustomField>
    <fullName>departementProprietaires__c</fullName>
    <label>Département/Région (Propriétaires)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>