force-app/main/default/objects/Chantier__c/fields/diagCaseWithoutQuoteCount__c.field-meta.xml
<CustomField>
    <fullName>diagCaseWithoutQuoteCount__c</fullName>
    <label>[#] Nombre de requête diag</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>