force-app/main/default/objects/Chantier__c/fields/diffSectorisation__c.field-meta.xml
<CustomField>
    <fullName>diffSectorisation__c</fullName>
    <formula>codeMagasinActuel__c != codeMagasinReference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diff Secto</label>
    <type>Checkbox</type>
</CustomField>