force-app/main/default/objects/Chantier__c/fields/distanceChantierDepot__c.field-meta.xml
<CustomField>
    <fullName>distanceChantierDepot__c</fullName>
    <formula>IF(OR(ISNULL(Localisation__c),
      ISNULL(sectorisation__r.localisationDepot__c)),
   NULL,
   DISTANCE(Localisation__c, sectorisation__r.localisationDepot__c, &apos;km&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance chantier / dépôt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>