force-app/main/default/objects/Chantier__c/fields/distanceChantierVendeur__c.field-meta.xml
<CustomField>
    <fullName>distanceChantierVendeur__c</fullName>
    <formula>IF(OR(ISNULL(Localisation__c),
      ISNULL(owner__r.localisationLatitude__c), 
						ISNULL(owner__r.localisationLongitude__c)),
   NULL,
   DISTANCE(Localisation__c, GEOLOCATION( owner__r.localisationLatitude__c , owner__r.localisationLongitude__c ), &apos;km&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance chantier / vendeur</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>